--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
-<!doctype html>
-<head></head>
-<body></body>
+<!DOCTYPE html>
+<html>
+    <head><link rel="stylesheet" href="styles.css"></head>
+    <body>
+        <h1>working on it</h1>
+    </body>
+</html>
