--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <head><link rel="stylesheet" href="styles.css"></head>
     <body>
-        <h1 id="_heading">working on it</h1>
+        <h1>working on it</h1>
     </body>
 </html>
