--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <head><link rel="stylesheet" href="styles.css"></head>
+    <head>The ATOM<link rel="stylesheet" href="styles.css"></head>
     <body>
         <h1>working on it</h1>
     </body>
