--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
-    <head><title>HEHE BOI!</title><link rel="stylesheet" href="styles.css"></head>
+    <head>
+        <meta charset="UTF-8" />
+        <title>HEHE BOI!</title>
+        <link rel="stylesheet" href="styles.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    </head>
     <body>
-        <h1>working on it</h1>
+        <main>
+            
+        </main>
     </body>
 </html>
