--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
     <body>
         <main>
             <section class="no-parallax">
-                <h1>Fun fact:</h1>
+                <h1>Targets are the enemy of Habits</h1>
               </section>
               <section class="parallax bg">
                 <h1>
-                  The sound that occurs when you snap your fingers is made by your
-                  middle finger hitting your palm!
+                  Habits hire us forever and take us higher,
+                  whereas targets tame us and leave us clueless
+                  after we achieve them.
                 </h1>
               </section>
               <section class="no-parallax">
-                <h1>Have a nice day!</h1>
+                <h1>Author: Mahathir</h1>
               </section>
         </main>
     </body>
