--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
               </section>
               <section class="no-parallax">
                 <h1>Author: Mahathir</h1>
+                <h4>Source: Do Epic Shit by Ankur Warikoo</h4>
               </section>
         </main>
     </body>
