--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </h1>
               </section>
               <section class="no-parallax">
-                <h2>Author: Mahathir</h2>
+                <h2>Author: Mahathir</h2><br>
                 <h4>Source: Do Epic Shit by Ankur Warikoo</h4>
               </section>
         </main>
